@@ -1,17 +1,17 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-SimpleParse/HTML-SimpleParse-0.12.ebuild,v 1.15 2008/11/18 15:05:37 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-SimpleParse/HTML-SimpleParse-0.12.ebuild,v 1.16 2009/01/11 14:12:11 tove Exp $
 
+MODULE_AUTHOR=KWILLIAMS
 inherit perl-module
 
 DESCRIPTION="A bare-bones HTML parser, similar to HTML::Parser, but with a couple important distinctions."
-HOMEPAGE="http://search.cpan.org/~kwilliams/"
-SRC_URI="mirror://cpan/authors/id/K/KW/KWILLIAMS/${P}.tar.gz"
 
-LICENSE="Artistic"
+LICENSE="|| ( Artistic GPL-2 )"
 SLOT="0"
 KEYWORDS="alpha amd64 ia64 ppc ppc64 sparc x86"
 IUSE=""
 
-DEPEND=">=virtual/perl-Module-Build-0.28
-	dev-lang/perl"
+RDEPEND="dev-lang/perl"
+DEPEND="${RDEPEND}
+	>=virtual/perl-Module-Build-0.28"
