@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST HTML-SimpleParse-0.12.tar.gz 8486 RMD160 97e26d2e8fe5da6b897a9ced6815ebaf03792242 SHA1 46823e4344ab6ca91078a21e16434a26aafe5f9d SHA256 c103a19cf99801489ce23e4da86a5f9df79f032f1f1c71b8130d0d3ff96e6304
-EBUILD HTML-SimpleParse-0.12.ebuild 615 RMD160 b5187db00e3dbefb3714f1e88da42d79304888b8 SHA1 cb3ef3b8be8f50e09fe0c7526e0ad846c31e4f74 SHA256 eaa2c5dcc0454d4996540d25d2e4135b099e9857778107d132a77e28eea6174d
-MISC ChangeLog 2197 RMD160 e5125265710cff13815fe4a90e6555d9a735f021 SHA1 04752376fb76955edb5d16194e23ac5a52bf9dc6 SHA256 9a62d44660cb2d6e445461eb45b7dba9437b145890b6efb5904c3caf559e2be2
+EBUILD HTML-SimpleParse-0.12.ebuild 565 RMD160 87740a5ae1683549cbce74a1fdb9beb884becc89 SHA1 a28dddfb6214fc4f126d0519326c4e8b8b933d5b SHA256 bcaf040c92d04e302590c575b8e918eaff6e32767633a67d25af00458bc49f25
+MISC ChangeLog 2323 RMD160 a8d1d77e49bc19b7dc1d206b407d671d75f87940 SHA1 ab031b9121f8f3dcae0b3bfe8f48e6ef0da4d098 SHA256 4e326a01412fccc9e9ee1f4bc53b739ac053aa016a2f61829f21d0428e52776d
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkki2bIACgkQV3J2n04EauwYpwCaAuzk41BcWLnOYqG075tP7vaN
-nHkAnjSFwfa35rebw9gu5ibDnvf5rupT
-=ZPls
+iEYEARECAAYFAklp/i0ACgkQV3J2n04EauzMZgCg1vSNlvIhrVv8FOsppfJprtyC
+/oIAoLZxTN//dGIbwkA0yIDLaP7/OVcG
+=AwnE
 -----END PGP SIGNATURE-----
