@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/HTML-SimpleParse
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-SimpleParse/ChangeLog,v 1.19 2008/11/18 15:05:37 tove Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-SimpleParse/ChangeLog,v 1.20 2009/01/11 14:12:11 tove Exp $
+
+  11 Jan 2009; Torsten Veller <tove@gentoo.org>
+  HTML-SimpleParse-0.12.ebuild:
+  Remove Module-Build from RDEPEND (#246942)
 
   18 Nov 2008; Torsten Veller <tove@gentoo.org>
   HTML-SimpleParse-0.12.ebuild:
